<resources>
    <string name="app_name">User App</string>

    <string name="title_activity_main2">MainActivity</string>
    <string name="default_notification_channel_id">ServiceBooking</string>
    <string name="title_home">Home</string>
    <string name="category">Category</string>
    <string name="service">Service</string>
    <string name="myorder">My Order</string>

    <string name="Account">Account</string>

    <string name="api_key">AIzaSyBAUTLllLoIeyoajizeO0BZS8HaTYHD2Y0</string>
    <string name="string_internet_connection_not_available">Internet Connection Not Available</string>
    <string name="string_some_thing_wrong">Something went wrong.</string>
    <string name="contentDescription">ImageView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="msg_location_service_started">Location Tracking Started</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="vendor_name">Plumber Brothers</string>
    <string name="menu_gallery">Gallery</string>
    <string name="password">Password</string>
    <string name="otp_verify">Verify OTP</string>
    <string name="otp_message">Kindly check your SMS send on +91 989 878 XXXX and
your email examplemail@gmail.com</string>
    <string name="hint_mob_em">Mobile no or email ID</string>
    <string name="hint_otp">Verify OTP</string>
    <string name="hint_kindly">Verify OTP</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="forget_password">Forget password</string>
    <string name="become_vendor">Become Vendor</string>
    <string name="or">Or</string>
    <string name="login">LOGIN</string>
    <string name="sing_up">Dont have an account yet ? Sign up !</string>
    <string name="fb_login">Login with Facebook</string>
    <string name="g_login">Login with gmail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="arr_nav_service_items">
        <item>@string/home</item>
        <item>@string/mycart</item>
        <item>@string/myaccount</item>
        <item>@string/myorder</item>
        <item>@string/wishlist</item>
        <item>@string/offer</item>
        <item>@string/chatService</item>
        <item>@string/help</item>
        <item>@string/helplist</item>
        <item>Terms and Condition</item>
        <item>@string/privacy</item>
        <item>@string/aboutUs</item>
    </string-array>
    <string name="home">Home</string>
    <string name="helplist">Help List</string>
    <string name="myorder_list">My Order</string>
    <string name="myaccount">My Account</string>
    <string name="mycart">My Cart</string>
    <string name="wallet">My wallet</string>
    <string name="chatService">My Chat Service</string>
    <string name="wishlist">My Wishlist</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy Policy</string>
    <string name="aboutUs">About Us</string>
    <string name="offer">offer</string>
    <string name="coupons">coupons</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>